--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -25,6 +25,10 @@
                 <div class="stat-label">Premium</div>
             </div>
             <div class="stat-card">
+                <div class="stat-value" id="stat-semi-premium">0</div>
+                <div class="stat-label">Semi-Premium</div>
+            </div>
+            <div class="stat-card">
                 <div class="stat-value" id="stat-non-premium">0</div>
                 <div class="stat-label">Non-Premium</div>
             </div>
@@ -38,6 +42,7 @@
                 <div class="filter-buttons">
                     <button class="filter-btn active" data-filter="all">All</button>
                     <button class="filter-btn" data-filter="premium">👑 Premium</button>
+                    <button class="filter-btn" data-filter="semi_premium">🌓 Semi-Premium</button>
                     <button class="filter-btn" data-filter="non_premium">🔓 Non-Premium</button>
                     <button class="filter-btn" data-filter="favorites">⭐ Favorites</button>
                 </div>
